--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: ET-Jekyll Theme
 description: A minimal Jekyll theme inspired by Tufte CSS
-url: "https://et-jekyll.netlify.app"
+url: "https://cnzjqz-hanz.github.io/"
 host: 0.0.0.0
 
 
