Adjust pic and title

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ###########
 # site.title
 
-title: ET-Jekyll Theme
+title: Han Zheng (鄭涵)
 description: A minimal Jekyll theme inspired by Tufte CSS
 url: "https://cnzjqz-hanz.github.io/"
 host: 0.0.0.0
